--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ $(document).ready(function () {
 </div>
 
 
+<p>Hello,</p>
 <p>This is a highly informative pie chart:</p>
 <pre class="r"><code># Hadley (and Joel)'s favourite pie chart
 df &lt;- data.frame(
